strategy/api: implement strategy post and get api

--- a/config/manager_config.default.toml
+++ b/config/manager_config.default.toml
@@ -34,3 +34,7 @@ YOUR_PUBLIC_KEY_HERE
 [account]
 admin_email = "admin@example.com"
 admin_password = "your-password-here"
+
+[k8s]
+kube_config_path = "/path/to/kubeconfig"
+in_cluster = false
