add kind init script to test in k8s cluster

--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -1,5 +1,5 @@
 # Build stage
-FROM golang:1.24-alpine AS builder
+FROM golang:1.24-alpine3.22 AS builder
 
 # Set working directory
 WORKDIR /app
@@ -17,7 +17,7 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
 
 # Final stage
-FROM alpine:latest
+FROM alpine:3.22
 
 # Install ca-certificates for HTTPS and bash for scripts
 RUN apk --no-cache add ca-certificates bash curl
@@ -27,16 +27,12 @@ WORKDIR /app/
 
 # Copy the binary from builder stage
 COPY --from=builder /app/main .
-COPY config ./
+COPY ./config/dm_config.default.toml /app/config/dm_config.toml
+COPY ./config/manager_config.default.toml /app/config/manager_config.toml
+COPY ./manager/migration /app/manager/migration
 
 # Create directory for Kubernetes config
 RUN mkdir -p /app/.kube
 
 # Expose port
-EXPOSE 8080
-
-# Set environment variables
-ENV GIN_MODE=release
-
-# Run the application with in-cluster mode by default
-ENTRYPOINT ["bash"]
+CMD [ "/app/main", "manager" ]
