refactor/api: add auth api and metric to decision maker

--- a/deployment/kind/mongo/statefulset.yaml
+++ b/deployment/kind/mongo/statefulset.yaml
@@ -97,6 +97,13 @@ spec:
                         });
                         print("Replica set initiated");
                       }
+                      while (true) {
+                        const hello = db.hello();
+                        if (hello.isWritablePrimary) {
+                          break;
+                        }
+                        sleep(1000);
+                      }
                       db = db.getSiblingDB("admin");
                       try {
                         db.getUser("'"$MONGO_ROOT_USERNAME"'");
